--- a/cronjob-monitor/package.json
+++ b/cronjob-monitor/package.json
@@ -19,6 +19,9 @@
     "@types/node": "^20.10.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "axios": "^1.6.0",
+    "csv-parse": "^6.1.0"
   }
 }
-
