--- a/cronjob-monitor/package.json
+++ b/cronjob-monitor/package.json
@@ -27,6 +27,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.946.0",
     "axios": "^1.6.0",
     "csv-parse": "^6.1.0"
   }
