--- a/monitor/package.json
+++ b/monitor/package.json
@@ -9,8 +9,9 @@
     "test:debug": "playwright test --debug",
     "test:ui": "playwright test --ui",
     "test:daily": "source ./load-env.sh && playwright test src/graylog/scenarios/*.spec.ts",
-    "test:daily-1": "source ./load-env.sh && playwright test src/graylog/scenarios/daily-1.spec.ts",
-    "test:daily-2": "source ./load-env.sh && playwright test src/graylog/scenarios/daily-2.spec.ts",
+    "test:daily-eapi": "source ./load-env.sh && playwright test src/graylog/scenarios/daily-eapi.spec.ts",
+    "test:daily-order": "source ./load-env.sh && playwright test src/graylog/scenarios/daily-order.spec.ts",
+    "test:daily-rest": "source ./load-env.sh && playwright test src/graylog/scenarios/daily-rest.spec.ts",
     "codegen": "playwright codegen",
     "install:browsers": "playwright install chromium",
     "upload:s3": "ts-node src/utils/uploadToS3.ts"
