--- a/monitor/package.json
+++ b/monitor/package.json
@@ -9,7 +9,7 @@
     "test:debug": "playwright test --debug",
     "test:ui": "playwright test --ui",
     "test:daily": "source ./load-env.sh && playwright test src/graylog/scenarios/*.spec.ts",
-    "test:daily-eapi": "source ./load-env.sh && playwright test src/graylog/scenarios/daily-eapi.spec.ts",
+    "test:daily-summary": "source ./load-env.sh && playwright test src/graylog/scenarios/daily-summary.spec.ts",
     "test:daily-order": "source ./load-env.sh && playwright test src/graylog/scenarios/daily-order.spec.ts",
     "test:daily-rest": "source ./load-env.sh && playwright test src/graylog/scenarios/daily-rest.spec.ts",
     "codegen": "playwright codegen",
